--- a/HomeChef/src/main/resources/application.yml
+++ b/HomeChef/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 spring:
-#  mail:
-#    host: smtp.gmail.com
-#    port: 587
-#    username: salernoflix@gmail.com
-#    password: jwgaeiipasfesywr
-#    protocol: smtp
-#    properties:
-#      mail:
-#        smtp:
-#          auth: true
-#          starttls:
-#            enable: true
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: salernoflix@gmail.com
+    password: jwgaeiipasfesywr
+    protocol: smtp
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
   datasource:
     url: jdbc:mysql://localhost:3306/HomeChef
     username: root
