--- a/HomeChef/src/main/resources/application.yml
+++ b/HomeChef/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  main:
+    allow-bean-definition-overriding: true
   mail:
     host: smtp.gmail.com
     port: 587
@@ -19,5 +21,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
 server:
   port: 8084
